<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/llLocation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_back" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="18dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="18dp"
                android:background="@drawable/rounded_dark_gray_item"
                android:padding="12dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                tool:text="Tt"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ivIcon"
                app:layout_constraintStart_toEndOf="@id/ivIcon"
                app:layout_constraintTop_toTopOf="@id/ivIcon" />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="м.Київ"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <TextView
                android:id="@+id/tvGroup"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/oval_item"
                android:gravity="center"
                tool:text="Група 1"
                android:textAllCaps="false"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tvCity"
                app:layout_constraintTop_toBottomOf="@id/tvCity" />

            <LinearLayout
                android:id="@+id/llSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:background="@drawable/rounded_explore_item"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGroup">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <View
                    android:id="@+id/vDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="12dp"
                    android:background="@color/light_gray" />

                <TextView
                    android:id="@+id/tvDescription1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableStart="@drawable/ic_flash_off"
                    android:drawablePadding="8dp"
                    android:text="Можливі відключення світла"
                    android:textColor="@color/light_gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDescription2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawableStart="@drawable/ic_warning"
                    android:drawablePadding="8dp"
                    android:text="@string/shutdown_light"
                    android:textColor="@color/light_gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bNotifications"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="18dp"
                android:background="@drawable/rounded_dark_gray_item"
                android:drawableStart="@drawable/ic_notifications"
                android:drawablePadding="8dp"
                android:gravity="start|center"
                android:padding="8dp"
                android:text="@string/notification"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llSchedule" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bDelete"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="18dp"
                android:background="@drawable/rounded_dark_gray_item"
                android:drawableStart="@drawable/ic_trash"
                android:drawablePadding="8dp"
                android:gravity="start|center"
                android:padding="8dp"
                android:text="@string/delete_location"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bNotifications" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
